# TinyFSL

./: .gitignore  Dockerfile  Dockerfile.txt  README.md  applytopup.pro  bet2.pro  download_fsl.bat  eddy.pro  patch_fsl.bat  topup.pro
.github/workflows/: build.yml  build_docker.yml  build_linux.yml  build_mac.yml  build_win.yml  build_win64.yml  build_win64_cuda.yml
applytopup/: CMakeLists.txt
bet2/: CMakeLists.txt
build_packages/: Dockerfile
build_packages/ubuntu_2004/: Dockerfile
build_packages/ubuntu_2204/: Dockerfile
build_packages/ubuntu_2404/: Dockerfile
download/: download_boost.bat  download_fsl.bat  download_openblas.bat
eddy/: CMakeLists.txt
fsl/: download_source.bat
fsl/include/NewNifti/: Makefile  NewNifti.cc  build_env_setup.sh  conda_build.sh  legacyFunctions.cc  legacyFunctions.h  metadata_conda_debug.yaml  nifti1.h
fsl/include/armawrap/: .gitlab-ci.yml  CHANGELOG.rst  LICENSE  Makefile  README.md  armadillo  armawrap.hpp  base.hpp  build_env_setup.sh  conda_build.sh  function_cholesky.hpp  function_svd.hpp  metadata_conda_debug.yaml  newmat.h  operator_ampersand.hpp  operator_call.hpp  operator_insert.hpp  operator_pipe.hpp  operator_stream.hpp  subview.hpp
fsl/include/basisfield/: Makefile  basisfield.cpp  basisfield.h  build_env_setup.sh  conda_build.sh  dctfield.cpp  dctfield.h  fsl_splines.h  metadata_conda_debug.yaml  splinefield.cpp  splinefield.h  splines.c  splines.h
fsl/include/bet2/: Makefile  bet  bet.tcl  bet2.cpp  bet_proc.tcl  betsurf.cpp  betsurf.h  build_env_setup.sh  conda_build.sh  metadata_conda_debug.yaml  old_betall  robustfov.cc
fsl/include/cprob/: Makefile  README.md  bdtr.cc  btdtr.cc  build_env_setup.sh  chdtr.cc  conda_build.sh  const.cc  cprob.h  dftest.cc  drand.cc  expx2.cc  fdtr.cc  gamma.cc  gdtr.cc  igam.cc  igami.cc  incbet.cc  incbi.cc  kolmogorov.cc  libprob.h  mconf.h  metadata_conda_debug.yaml  nbdtr.cc  ndtr.cc  ndtri.cc  pdtr.cc  polevl.cc  stdtr.cc  unity.cc  xmath.cc  xmath.h
fsl/include/cudabasisfield/: CBFKernelDefinitions.cu  CBFKernelHelpers.cuh  CBFKernels.cuh  CBFMemory.h  CBFSparseDiagonalMatrix.cu  CBFSparseDiagonalMatrix.cuh  CBFSplineField.cu  CBFSplineField.cuh  Makefile  build_env_setup.sh  conda_build.sh  metadata_conda_debug.yaml
fsl/include/eddy/: BiasFieldEstimator.h  CPUStackResampler.cpp  CPUStackResampler.h  CublasHandleManager.h  CudaVolume.cu  DWIPredictionMaker.h  DiffusionGP.cpp  DiffusionGP.cu  DiffusionGP.h  ECModels.cpp  ECModels.h  ECScanClasses.h  EddyCommandLineOptions.cpp  EddyCommandLineOptions.h  EddyCudaHelperFunctions.cu  EddyCudaHelperFunctions.h  EddyGpuUtils.h  EddyHelperClasses.h  EddyInternalGpuUtils.h  EddyMatrixKernels.h  EddyUtils.cpp  EddyUtils.h  HyParEstimator.cpp  HyParEstimator.h  KMatrix.cpp  KMatrix.h  LSResampler.cpp  LSResampler.cu  LSResampler.h  Makefile  MoveBySuscCF.cpp  MoveBySuscCF.h  PostEddyAlignShellsFunctions.h  PostEddyCF.cpp  PostEddyCF.h  StackResampler.cu  b0Predictor.cpp  b0Predictor.h  build_env_setup.sh  conda_build.sh  (+5 more)
fsl/include/eddy/cuda/: DerivativeCalculator.cu  DerivativeCalculator.h  EddyCudaHelperFunctions.cu  (+10 more)
fsl/include/meshclass/: Makefile  build_env_setup.sh  conda_build.sh  drawmesh.cpp  mesh.cpp  mesh.h  meshclass.h  metadata_conda_debug.yaml  mpoint.cpp  mpoint.h  point.cpp  point.h  profile.cpp  profile.h  pt_special.cpp  pt_special.h  selfintersection.cpp  triangle.cpp  triangle.h
fsl/include/miscmaths/: Makefile  Simplex.cpp  Simplex.h  SpMat.h  SpMatMatrices.cpp  SpMatMatrices.h  base2z.cc  bfmatrix.cpp  bfmatrix.h  build_env_setup.sh  conda_build.sh  cspline.cc  cspline.h  f2z.cc  f2z.h  histogram.cc  histogram.h  kernel.cc  kernel.h  metadata_conda_debug.yaml  minimize.cc  minimize.h  miscmaths.cc  miscmaths.h  miscprob.cc  miscprob.h  nonlin.cpp  nonlin.h  optimise.cc  optimise.h  rungekutta.cc  rungekutta.h  sparse_matrix.cc  sparse_matrix.h  sparsefn.cc  sparsefn.h  splinterpolator.h  t2z.cc  t2z.h
fsl/include/newimage/: .gitlab-ci.yml  Makefile  build_env_setup.sh  complexvolume.cc  complexvolume.h  conda_build.sh  costfns.cc  costfns.h  fmribmain.h  fmribmain2.h  imfft.cc  lazy.cc  lazy.h  lazyiterators.h  metadata_conda_debug.yaml  newimage.cc  newimage.h  newimageall.h  newimagefns.cc  newimagefns.h  newimageio.h  positerators.h  skeletonapp.cc
fsl/include/topup/: Makefile  applytopup.cpp  applytopup.h  build_env_setup.sh  conda_build.sh  displacement_vector.cpp  displacement_vector.h  metadata_conda_debug.yaml  topup_costfunctions.cpp  topup_file_io.cpp  topup_file_io.h  topup_matrices.cpp  topup_matrices.h  topupfns.cpp  topupfns.h
fsl/include/utils/: FSLProfiler.cpp  Makefile  build_env_setup.sh  buildno.h  check.cc  conda_build.sh  functions.cc  log.cc  log.h  metadata_conda_debug.yaml  options.h  parse.cc  stack_dump.h  time_tracer.cc  time_tracer.h  tracer_plus.h
fsl/include/warpfns/: Makefile  build_env_setup.sh  conda_build.sh  fnirt_file_reader.cpp  fnirt_file_reader.h  fnirt_file_writer.cpp  fnirt_file_writer.h  metadata_conda_debug.yaml  point_list.cpp  point_list.h  warpfns.cc  warpfns.h
fsl/include/znzlib/: Makefile  build_env_setup.sh  conda_build.sh  metadata_conda_debug.yaml  znzlib.c  znzlib.h
patches/: patch_FSLOUTPUTTYPE.bat  patch_arma.bat  patch_aw.bat  patch_eddy.bat  patch_eddy_tipl.bat  patch_header.bat  patch_mtherr.bat  patch_newimage.bat  patch_option_bool.bat  patch_stack_dump.bat  patch_topup.bat  patch_znzlib.bat
patches/NewNifti/: NewNifti.h  nifti2.h
patches/armawrap/: operator_call.hpp
patches/basisfield/: splinefield.cpp
patches/cprob/: cprob.h  mconf.h  mtherr.cc
patches/eddy/: BiasFieldEstimatorImpl.cpp  ECScanClasses.cpp  EddyHelperClasses.cpp  EddyHelperClasses.h  PostEddyAlignShellsFunctions.cpp  eddy.cpp
patches/eddy/cuda/: CudaVolume.cu  CudaVolume.h
patches/newimage/: generalio.cc  imfft.h  newimage.cc  newimage.h
patches/topup/: topup.cpp  topup_costfunctions.cpp  topup_costfunctions.h
patches/utils/: FSLProfiler.h  functions.cc  options.h
patches/warpfns/: warpfns.h
patches/znzlib/: znzlib.h
topup/: CMakeLists.txt
